# lista-django

./: Procfile  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_alter_produto_quantidade.py  0002_remove_usuario_cpf_remove_usuario_data_nascimento_and_more.py
core/models/: __init__.py  lista.py  mercado.py  produto.py  usuario.py
core/serializers/: __init__.py  lista.py  mercado.py  produto.py
lista/: settings.py  urls.py
media/migrations/: 0001_initial.py
